# RvC

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: cli.rs
src/commands/: add.rs  checkout.rs  commit.rs  diff.rs  init.rs  log.rs  mod.rs  status.rs
src/core/: hashing.rs  mod.rs  store.rs  types.rs
src/index/: index.rs  mod.rs
src/network/: behaviour.rs  discovery.rs  identity.rs  mod.rs  node.rs  protocol.rs  transport.rs
src/repo/: meta.rs  mod.rs  sync.rs
src/sync/: manager.rs  messages.rs  mod.rs  protocol.rs
tests/: identity_test.rs  integration_tests.rs
