
[package]
name = "rvc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rvc"
path = "src/main.rs"

[dependencies]
blake3 = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.102"                                       
tempfile = "3.23.0"
libp2p = { version = "0.54", features = ["tcp", "tokio", "noise", "yamux", "mdns","macros"] }
dirs = "6.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"